// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InitialGame classic game renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxiKw bRGait"
  >
    <div
      class="sc-AxjAm bVDfZd"
    >
      <img
        alt="paper"
        class="sc-AxirZ dtQZHs"
        src="icon-paper.svg"
      />
    </div>
    <div
      class="sc-AxjAm fvgMhd"
    >
      <img
        alt="scissors"
        class="sc-AxirZ dtQZHs"
        src="icon-scissors.svg"
      />
    </div>
    <div
      class="sc-AxjAm ckhsNd"
    >
      <img
        alt="rock"
        class="sc-AxirZ dtQZHs"
        src="icon-rock.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`InitialGame expansion game renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb hSmDqS"
  >
    <div
      class="sc-AxjAm gQvrnB"
    >
      <img
        alt="paper"
        class="sc-AxirZ eMbVZM"
        src="icon-paper.svg"
      />
    </div>
    <div
      class="sc-AxjAm kEAtnB"
    >
      <img
        alt="scissors"
        class="sc-AxirZ eMbVZM"
        src="icon-scissors.svg"
      />
    </div>
    <div
      class="sc-AxjAm jSYbZd"
    >
      <img
        alt="rock"
        class="sc-AxirZ eMbVZM"
        src="icon-rock.svg"
      />
    </div>
    <div
      class="sc-AxjAm bhcJld"
    >
      <img
        alt="lizard"
        class="sc-AxirZ eMbVZM"
        src="icon-lizard.svg"
      />
    </div>
    <div
      class="sc-AxjAm hvPtrl"
    >
      <img
        alt="spock"
        class="sc-AxirZ eMbVZM"
        src="icon-spock.svg"
      />
    </div>
  </div>
</DocumentFragment>
`;
